1:C#后端刷卡读卡流程模拟 2:请求流程整理,后端输出返回 3:C#标准输入输出模拟测试

--- a/application/C#/EasyhisInteractiveCore/EasyhisInteractiveCore/EasyhisInteractiveCore.csproj
+++ b/application/C#/EasyhisInteractiveCore/EasyhisInteractiveCore/EasyhisInteractiveCore.csproj
@@ -47,9 +47,17 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadCradResult.cs" />
+    <Compile Include="Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="callapp.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="install.reg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
